--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800;900&display=swap');
 
+     @media (min-width: 768px) {
+  body {
+    cursor: url('https://static.vecteezy.com/system/resources/thumbnails/032/058/256/small/cursor-icon-illustration-3d-render-element-png.png'), auto;
+  }
+}
 * {
     margin: 0;
     padding: 0;
