--- a/style.css
+++ b/style.css
@@ -303,16 +303,20 @@ span {
     position: relative;
     width: 25rem;
     height: 25rem;
-    border-radius: 50%;
+    object-fit: cover;
+    border-radius: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .about-img img {
-    width: 90%;
+    width: 85%;
+    height: 90%;
+    object-fit: cover;
     border-radius: 50%;
     border: .2rem solid var(--main-color);
+
 }
 
 .about-img .circle-spin {
@@ -323,10 +327,10 @@ span {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border-top: .2rem solid var(--second-bg-color);
-    border-bottom: .2rem solid var(--second-bg-color);
-    border-left: .2rem solid var(--main-color);
-    border-right: .2rem solid var(--main-color);
+    border-top: .2rem solid black;
+    border-bottom: .2rem solid black;
+    border-left: .2rem solid rgb(0, 200, 255);
+    border-right: .2rem solid rgb(0, 170, 255);
     animation: aboutSpinner 8s linear infinite;
 }
 
